fixed the icons lighting up too much

--- a/styles/header.css
+++ b/styles/header.css
@@ -72,13 +72,13 @@ nav a img {
   max-width: 50px;
 }
 
-nav .link-image {
+/* nav .link-image {
   transition: filter 0.3s;
 }
 
 nav .link-image:hover {
   filter: brightness(200%);
-}
+} */
 
 nav a {
   color: var(--bet-background-color);
